--- a/team.html
+++ b/team.html
@@ -5,102 +5,104 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/header-footer.css">
     <link rel="stylesheet" href="CSS/teamstyles.css">
-    <title>TeamMembers</title>
+    <link rel="stylesheet" href="CSS/cta.css">
+    <title>Team Members</title>
 </head>
 <body>
-      <div id="header"></div> 
+    <!-- Header -->
+    <div id="header"></div>
 
-   <section class="team-section">
-    <h2 class="team-title">Team Members</h2>
-    <hr class="team-divider">
+    <!-- Team Section -->
+    <section class="team-section">
+        <h2 class="team-title">Team Members</h2>
+        <hr class="team-divider">
 
-    <div class="team-container">
+        <div class="team-container">
 
-        <!-- Team Member 1 -->
-        <div class="team-member">
-            <img src="images/TeamMembers/Dr.Faisal.png" alt="Amir Faisal" class="team-img">
-            <div class="team-info blue-bg">
-                <h3>Cancer Drug Discovery and Resistance</h3>
-                <p><strong>Amir Faisal, PhD</strong> (FMI, Switzerland), <em>Cell Biology</em></p>
-                <p>Associate Professor, LUMS, Lahore</p>
-                <p>24+ years of experience in Cell Signaling, Cancer Drug Discovery</p>
-                <p> <a href="#">Google Scholar</a></p>
+            <!-- Team Member 1 -->
+            <div class="team-member">
+                <img src="images/TeamMembers/Dr.Faisal.png" alt="Amir Faisal" class="team-img">
+                <div class="team-info blue-bg">
+                    <h3>Cancer Drug Discovery and Resistance</h3>
+                    <p><strong>Amir Faisal, PhD</strong> (FMI, Switzerland), <em>Cell Biology</em></p>
+                    <p>Associate Professor, LUMS, Lahore</p>
+                    <p>24+ years of experience in Cell Signaling, Cancer Drug Discovery</p>
+                    <p><a href="#">Google Scholar</a></p>
+                </div>
             </div>
-        </div>
 
-        <!-- Team Member 2 -->
-        <div class="team-member">
-            <img src="images/TeamMembers/M.Sohaib.png" alt="Muhammad Shoaib" class="team-img">
-            <div class="team-info green-bg">
-                <h3>Epigenetics and Cancer Biology</h3>
-                <p><strong>Muhammad Shoaib, PhD</strong> (Paris-Sud University, France), <em>Molecular and Cell Biology</em></p>
-                <p>Associate Professor, LUMS, Lahore</p>
-                <p>18+ years of experience in Molecular Biology, Biochemistry, Epigenetics, Cancer Biology</p>
-                <p> <a href="#" >Google Scholar</a></p>
+            <!-- Team Member 2 -->
+            <div class="team-member">
+                <img src="images/TeamMembers/M.Sohaib.png" alt="Muhammad Shoaib" class="team-img">
+                <div class="team-info green-bg">
+                    <h3>Epigenetics and Cancer Biology</h3>
+                    <p><strong>Muhammad Shoaib, PhD</strong> (Paris-Sud University, France), <em>Molecular and Cell Biology</em></p>
+                    <p>Associate Professor, LUMS, Lahore</p>
+                    <p>18+ years of experience in Molecular Biology, Biochemistry, Epigenetics, Cancer Biology</p>
+                    <p><a href="#">Google Scholar</a></p>
+                </div>
             </div>
-        </div>
 
-        <!-- Team Member 3 -->
-        <div class="team-member">
-            <img src="images/TeamMembers/Dr.Safee.png" alt="Safee Ullah Chaudhary" class="team-img">
-            <div class="team-info blue-bg">
-                <h3>Systems Biology, Proteomics and eHealth</h3>
-                <p><strong>Safee Ullah Chaudhary, PhD</strong> (KAIST, South Korea), <em>Bio and Brain Engineering</em></p>
-                <p>Associate Professor, LUMS, Lahore</p>
-                <p>18+ years of experience in Bioinformatics and Biomedical Engineering</p>
-                <p><a href="#">Google Scholar</a></p>
+            <!-- Team Member 3 -->
+            <div class="team-member">
+                <img src="images/TeamMembers/Dr.Safee.png" alt="Safee Ullah Chaudhary" class="team-img">
+                <div class="team-info blue-bg">
+                    <h3>Systems Biology, Proteomics and eHealth</h3>
+                    <p><strong>Safee Ullah Chaudhary, PhD</strong> (KAIST, South Korea), <em>Bio and Brain Engineering</em></p>
+                    <p>Associate Professor, LUMS, Lahore</p>
+                    <p>18+ years of experience in Bioinformatics and Biomedical Engineering</p>
+                    <p><a href="#">Google Scholar</a></p>
+                </div>
             </div>
-        </div>
 
-        <!-- Team Member 4 -->
-        <div class="team-member">
-            <img src="images/TeamMembers/M.Tariq.png" alt="Muhammad Tariq" class="team-img">
-            <div class="team-info green-bg">
-                <h3>Epigenetics and Development</h3>
-                <p><strong>Muhammad Tariq, PhD</strong> (FMI, Switzerland), <em>Cell Biology</em></p>
-                <p>Professor, LUMS, Lahore</p>
-                <p>25+ years of experience in Cell and Molecular Biology and Epigenetics</p>
-                <p><a href="#">Google Scholar</a></p>
+            <!-- Team Member 4 -->
+            <div class="team-member">
+                <img src="images/TeamMembers/M.Tariq.png" alt="Muhammad Tariq" class="team-img">
+                <div class="team-info green-bg">
+                    <h3>Epigenetics and Development</h3>
+                    <p><strong>Muhammad Tariq, PhD</strong> (FMI, Switzerland), <em>Cell Biology</em></p>
+                    <p>Professor, LUMS, Lahore</p>
+                    <p>25+ years of experience in Cell and Molecular Biology and Epigenetics</p>
+                    <p><a href="#">Google Scholar</a></p>
+                </div>
             </div>
-        </div>
 
-        <!-- Team Member 5 -->
-        <div class="team-member">
-            <img src="images/TeamMembers/Dr.Zaigham.jpg" alt="Zaigham Shahzad" class="team-img">
-            <div class="team-info blue-bg">
-                <h3>Quantitative Genetics</h3>
-                <p><strong>Zaigham Shahzad, PhD</strong> (SupAgro, France), <em>Population Genetics</em></p>
-                <p>Associate Professor, LUMS, Lahore</p>
-                <p>13+ years of experience in Population and Quantitative Genetics</p>
-                <p><a href="#">Google Scholar</a></p>
+            <!-- Team Member 5 -->
+            <div class="team-member">
+                <img src="images/TeamMembers/Dr.Zaigham.jpg" alt="Zaigham Shahzad" class="team-img">
+                <div class="team-info blue-bg">
+                    <h3>Quantitative Genetics</h3>
+                    <p><strong>Zaigham Shahzad, PhD</strong> (SupAgro, France), <em>Population Genetics</em></p>
+                    <p>Associate Professor, LUMS, Lahore</p>
+                    <p>13+ years of experience in Population and Quantitative Genetics</p>
+                    <p><a href="#">Google Scholar</a></p>
+                </div>
             </div>
+
         </div>
+    </section>
 
-    </div>
-</section>
+    <!-- Call To Action Section -->
+    <section class="cta-section">
+        <h2>Want to Collaborate with Our Experts?</h2>
+        <p>Get in touch with us to discuss innovative biotech solutions and partnerships.</p>
+        <a href="contactUs.html" class="cta-btn">Contact Us</a>
+    </section>
 
-      <div id="footer"></div>
- <script>
-  // Load header and then attach event listeners
-  fetch('header.html')
-    .then(response => response.text())
-    .then(data => {
-      document.getElementById('header').innerHTML = data;
-
-      // Attach hamburger toggle after header is inserted
-      const hamburger = document.getElementById('hamburger');
-      const navMenu = document.getElementById('nav-menu');
-
-      hamburger.addEventListener('click', function () {
-        navMenu.classList.toggle('show');
-      });
-    });
-
-  // Load footer
-  fetch('footer.html')
-    .then(response => response.text())
-    .then(data => document.getElementById('footer').innerHTML = data);
-</script>
+    <script>
+        // Load header and attach hamburger toggle
+        fetch('header.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('header').innerHTML = data;
+                const hamburger = document.getElementById('hamburger');
+                const navMenu = document.getElementById('nav-menu');
+                hamburger.addEventListener('click', function () {
+                    navMenu.classList.toggle('show');
+                });
+            });
+    </script>
+          <p class="copytag">&copy; 2025 Biotech Innovation Group. All rights reserved.</p>
 
 </body>
 </html>
