a contactus button bug fixed

--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
     <section class="cta-section">
         <h2>Ready to Innovate with Us?</h2>
         <p>Join hands with our experts to create groundbreaking biotech solutions.</p>
-        <a href="contact.html" class="cta-btn">Get in Touch</a>
+        <a href="contactUs.html" class="cta-btn">Contact Us</a>
     </section>
 
     <script>
