removed the learn more buttons from services page

--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@
                     <li><i class="fas fa-check-circle"></i> Drug combination studies</li>
                     <li><i class="fas fa-check-circle"></i> Gene expression analysis through q-PCR</li>
                 </ul>
-                <button class="cta-button">Learn More</button>
+                <!-- Removed Learn More button -->
             </div>
             <div class="services-column services-image">
                 <img src="images/Services/wetlab.png" alt="Wet lab experiment" class="service-img">
@@ -74,7 +74,7 @@
                     <li><i class="fas fa-check-circle"></i> Machine learning approaches for drug discovery</li>
                     <li><i class="fas fa-check-circle"></i> Structural bioinformatics analysis</li>
                 </ul>
-                <button class="cta-button">Learn More</button>
+                <!-- Removed Learn More button -->
             </div>
         </div>
     </section>
@@ -112,7 +112,6 @@
             <h2>Ready to Accelerate Your Research?</h2>
             <p>Contact us today to discuss how our services can support your specific needs</p>
             <button class="cta-button" onclick="window.location.href='contactUs.html'">Contact Us</button>
-
         </div>
     </section>
 
@@ -130,11 +129,7 @@
                     navMenu.classList.toggle('show');
                 });
             });
-
-        // Load footer
-  
     </script>
-      <p class="copytag">&copy; 2025 Biotech Innovation Group. All rights reserved.</p>
-
+    <p class="copytag">&copy; 2025 Biotech Innovation Group. All rights reserved.</p>
 </body>
 </html>
